Fixed styles (#2374)
* bumped version for gulp-sourcemap and gulp-scss

* bumped foundation version

* centered checkboxes

* changed width of first column

* changed admin-bottom

 * refactored and cleanup
 * admin-bottom is fixed where user save something
 * admin-bottom is relative to list in change list

* added additional information about actual context

* changed admin-bottom bg color

 * changed bg color to same as a change form

* hide empty column in inline

* removed panel from actions and filters

* added model verbose name to header

* added extra margin to auto-complete

* changed align of count-info in bulk edit view

* restyled filters fields

--- a/src/ralph/static/src/scss/_settings.scss
+++ b/src/ralph/static/src/scss/_settings.scss
@@ -93,3 +93,7 @@ $has-tip-border-bottom-hover: none;
 
 $alert-function-factor: -40%;
 $info-color: #F7F48A;
+
+$pagination-height: 0;
+
+$admin-bottom-bg: $tabs-content-bg-color !default;
